refactor: Simplify EventController by delegating repository calls to EventService